--- a/msilvercpa/css/stylesheet.css
+++ b/msilvercpa/css/stylesheet.css
@@ -77,5 +77,81 @@ select {
   }
 }
 
-/* END ========================================================================
-/* BP END ---------------------------------------------------------------------
+/* END ======================================================================= */
+/* BP END -------------------------------------------------------------------- */
+body {
+  background-image: linear-gradient(lightgrey, white, white);
+}
+
+.business-card {
+  text-align: right;
+  position: fixed;
+  top: 30px;
+  right: 5%;
+  background: white;
+  width: 300px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin: 10px 5px;
+  padding: 10px;
+  transform: rotate(15deg);
+  transition-duration: 200ms;
+
+}
+
+@media (max-width: 700px) {
+
+  .business-card {
+    position:fixed;
+    top: 60%;
+    transform: rotate(0deg);
+    transition-duration: 200ms;
+    opacity: .8;
+
+  }
+
+}
+
+#thumbnail {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.title-block {
+  padding: 10px;
+  width: 100%
+}
+
+.title-block #business-type {
+  background: maroon;
+  padding: 10px;
+}
+
+
+.pic-headshot {
+  height: 300px;
+  width: auto;
+  position: fixed;
+  left: 70%;
+  top: 40%;
+  opacity: .6;
+}
+
+.service-statement {
+  text-align: justify;
+  margin: 20px;
+  color: blue;
+  width: 60%;
+  font-size: 20px;
+
+}
+
+#service-head {
+    font-size: 35px;
+}
+
+
+footer h3 {
+  position: fixed;
+  top: 95%;
+  left: 10px;
+}
